--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,7 +22,10 @@
     );
   }
 }
-
+::-webkit-scrollbar {
+  width: 0; /* Remove scrollbar space */
+  background: transparent; /* Optional: just make scrollbar invisible */
+}
 body {
   background-color: '#2A2A29';
 }
