--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,6 +31,7 @@
   width: 4px !important;
   border-radius: 14px;
   background-color: black;
+  height: 0;
 }
 ::-webkit-scrollbar-thumb {
   border-radius: 13px;
